Ready to release

--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -54,7 +54,7 @@
 									FontSize="48"
 									Content="🠕"/>
 
-							<Button Grid.Row="1">Поиск</Button>
+							<!--<Button Grid.Row="1">Поиск</Button>-->
 							<Button Command="{Binding SwitchToPreviousReport}"
 									Grid.Row="2"
 									VerticalContentAlignment="Center"
@@ -307,7 +307,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="1"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -320,7 +320,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="2"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -338,7 +338,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="3"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -360,7 +360,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="4"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -378,7 +378,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="5"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -396,7 +396,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="6"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -414,7 +414,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="7"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -432,7 +432,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="8"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -450,7 +450,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="9"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -472,7 +472,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="10"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -490,7 +490,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="11"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -508,7 +508,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="12"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -526,7 +526,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="13"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -544,7 +544,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="14"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -562,7 +562,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="15"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -584,7 +584,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="16"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -602,7 +602,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="17"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -620,7 +620,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="18"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -638,7 +638,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="19"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -656,7 +656,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="20"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
