--- a/Client_App/Views/Forms/Forms1/Form_14.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_14.axaml
@@ -54,7 +54,7 @@
 									FontSize="48"
 									Content="🠕"/>
 
-							<Button Grid.Row="1">Поиск</Button>
+							<!--<Button Grid.Row="1">Поиск</Button>-->
 							<Button Command="{Binding SwitchToPreviousReport}"
 									Grid.Row="2"
 									VerticalContentAlignment="Center"
@@ -313,7 +313,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="1"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -326,7 +326,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="2"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -344,7 +344,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="3"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -366,7 +366,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="4"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -384,7 +384,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="5"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -402,7 +402,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="6"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -420,7 +420,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="7"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -438,7 +438,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="8"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -456,7 +456,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="9"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -478,7 +478,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="10"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -496,7 +496,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="11"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -514,7 +514,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="12"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -532,7 +532,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="13"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -550,7 +550,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="14"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -568,7 +568,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="15"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -586,7 +586,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="16"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -604,7 +604,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="17"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -626,7 +626,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="18"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -644,7 +644,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="19"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -662,7 +662,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="20"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -680,7 +680,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="21"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
@@ -698,7 +698,7 @@
 										<Border Classes="headerTemplate">
 											<Grid ColumnDefinitions="*,Auto">
 												<TextBlock Grid.Column="0" Text="22"/>
-												<Button Grid.Column="1"/>
+												<!--<Button Grid.Column="1"/>-->
 											</Grid>
 										</Border>
 									</DataTemplate>
