--- a/Client_App/Views/Forms/Forms1/Form_13.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_13.axaml
@@ -66,18 +66,22 @@
 				<Border Classes="borderContainer">
 					<Grid Margin="5" RowDefinitions="*,*,*,*,*">
 
-						<Grid ColumnDefinitions="*,*"  Grid.Row="0">
+						<Grid ColumnDefinitions="*,*,*"  Grid.Row="0">
 							<TextBlock Grid.Column="0" Margin="5" >Дата окончания предыдущего отчетного периода:</TextBlock>
-							<CalendarDatePicker Grid.Column="1"
+							<TextBox Grid.Column="1" Text="{Binding Report.StartPeriod.Value}"/>
+							<CalendarDatePicker Classes="buttonOnly"  
+								Grid.Column="2"
 								SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"
 								Watermark="дд.мм.гггг"/>
 						</Grid>
 
-						<Grid ColumnDefinitions="*,*"  Grid.Row="1">
+						<Grid ColumnDefinitions="*,*,*"  Grid.Row="1">
 							<TextBlock Grid.Column="0" Margin="5" >Дата окончания настоящего отчетного периода:</TextBlock>
-							<CalendarDatePicker
-								Grid.Column="1"
+							<TextBox Grid.Column="1"
 								Margin="10.5,3,0,0"
+								Text="{Binding Report.EndPeriod.Value}"/>
+							<CalendarDatePicker Classes="buttonOnly" 
+								Grid.Column="2"
 								SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"
 								Watermark="дд.мм.гггг"/>
 						</Grid>
@@ -350,7 +354,7 @@
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form13">
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding OperationDate.Value, Mode=TwoWay}"/>
-										<CalendarDatePicker Grid.Column="1"
+										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
 															SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
 									</Grid>
 								</DataTemplate>
@@ -480,7 +484,7 @@
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form13">
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding CreationDate.Value, Mode=TwoWay}"/>
-										<CalendarDatePicker Grid.Column="1"
+										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
 															SelectedDate="{Binding CreationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
 									</Grid>
 								</DataTemplate>
@@ -592,7 +596,7 @@
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form13">
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding DocumentDate.Value, Mode=TwoWay}"/>
-										<CalendarDatePicker Grid.Column="1"
+										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
 															SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
 									</Grid>
 								</DataTemplate>
